--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -14,5 +14,5 @@
   font-family: "Manrope";
   font-weight: 700;
   font-display: swap;
-  src: url("../fonts/Manrope-Light.woff2");
+  src: url("../fonts/Manrope-Bold.woff2");
 }
