--- a/source/sass/blocks/telegram.scss
+++ b/source/sass/blocks/telegram.scss
@@ -8,3 +8,25 @@
     background-image: url("../img/icon-telegram.svg");
   }
 }
+
+@media (min-width: $tablet-width) {
+  .telegram {
+    display: flex;
+    &__text {
+      display: block;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 18.2px;
+      color: #fff;
+      text-align: right;
+      height: 35px;
+      margin-right: 10px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .telegram {
+    margin: 0 auto;
+  }
+}
