Add Intro section --WIP

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,5 @@
 @import "./blocks/telegram.scss";
 @import "./blocks/phone.scss";
 @import "./blocks/navigation.scss";
+@import "./blocks/intro.scss";
+@import "./blocks/cd-animation.scss";
