--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -8,13 +8,15 @@
   &__wrapper {
     display: flex;
     position: relative;
-    padding: 10px 10px;
+    padding: 10px 0;
   }
   &__logo-wrapper {
     width: 56%;
+    padding-left: 10px;
   }
   &__contacts {
     width: 44%;
+    padding-right: 10px;
   }
   &__contacts-wrapper {
     width: 66%;
@@ -86,6 +88,9 @@
         transform: rotate(-45deg);
       }
     }
+  }
+  &__container {
+    background-color: #fff;
   }
 }
 
