--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   transition: 0.3s all;
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+  background-color: #fff;
   &__item {
     padding: 10px 20px;
     display: inline-block;
