--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,4 @@
 @import "./blocks/navigation.scss";
 @import "./blocks/intro.scss";
 @import "./blocks/cd-animation.scss";
+@import "./blocks/form.scss";
