--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -131,6 +131,7 @@
     &__wrapper {
       max-width: 1140px;
       margin: 0 auto;
+      z-index: 4;
     }
     &__description {
       display: inline;
@@ -146,6 +147,7 @@
     }
     &__logo {
       min-width: 280px;
+      margin-right: 10px;
     }
     &__logo-wrapper {
       display: flex;
