--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -30,3 +30,14 @@ img {
   background-position: center;
   border-radius: 4px;
 }
+
+.visually-hidden {
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  border: none;
+  position: absolute;
+  clip: rect(0,0,0,0);
+}
