--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "./global/fonts.scss";
 @import "./global/global.scss";
 @import "./global//variables.scss";
+@import "./global/animations.scss";
 @import "./blocks/header.scss";
 @import "./blocks/telegram.scss";
 @import "./blocks/phone.scss";
@@ -8,3 +9,4 @@
 @import "./blocks/intro.scss";
 @import "./blocks/cd-animation.scss";
 @import "./blocks/form.scss";
+@import "./blocks/examples.scss";
