--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -33,6 +33,13 @@
     &__input {
       font-size: 16px;
       line-height: 22.4px;
+      &--small {
+        padding: 6px 16px;
+        min-height: 47px;
+      }
+    }
+    &__submit--small {
+      min-height: 47px;
     }
   }
 }
