--- a/source/sass/global/animations.scss
+++ b/source/sass/global/animations.scss
@@ -8,7 +8,22 @@
     transform:none;
   }
 }
+
+@keyframes fadeInRight {
+  from {
+    opacity:0;
+    transform:translate3d(100%,0,0);
+  }
+  to {
+    opacity:1;
+    transform:none;
+  }
+}
 .fadeInUp {
   animation-name:fadeInUp;
+  animation-duration: 1s;
+}
+.fadeInRight {
+  animation-name: fadeInRight;
   animation-duration: 1s;
 }
