--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,3 +10,6 @@
 @import "./blocks/cd-animation.scss";
 @import "./blocks/form.scss";
 @import "./blocks/examples.scss";
+@import "./blocks/services.scss";
+@import "./blocks/callback.scss";
+@import "./blocks/modal.scss";
