--- a/source/sass/global/animations.scss
+++ b/source/sass/global/animations.scss
@@ -19,11 +19,26 @@
     transform:none;
   }
 }
+
+@keyframes fadeInLeft {
+  from {
+    opacity:0;
+    transform:translate3d(-100%,0,0);
+  }
+  to {
+    opacity:1;
+    transform:none;
+  }
+}
 .fadeInUp {
   animation-name:fadeInUp;
   animation-duration: 1s;
 }
 .fadeInRight {
   animation-name: fadeInRight;
+  animation-duration: 1s;
+}
+.fadeInLeft {
+  animation-name: fadeInLeft;
   animation-duration: 1s;
 }
