--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -16,3 +16,9 @@
   font-display: swap;
   src: url("../fonts/Manrope-Bold.woff2");
 }
+@font-face {
+  font-family: "Stolzl";
+  font-weight: 600;
+  font-display: swap;
+  src: url("../fonts/Stolzl-Bold.woff2");
+}
