--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,3 +13,5 @@
 @import "./blocks/services.scss";
 @import "./blocks/callback.scss";
 @import "./blocks/modal.scss";
+@import "./blocks/adjustment.scss";
+@import "./blocks//adjustment-item.scss";
