--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,5 @@
 @import "./blocks/modal.scss";
 @import "./blocks/adjustment.scss";
 @import "./blocks//adjustment-item.scss";
+@import "./blocks/types.scss";
+@import "./blocks/type.scss";
