--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,5 +1,7 @@
 .services {
   background-color: #232020;
+  border-top: 80px solid #fff;
+	margin-top: -80px;
   &__wrapper {
     padding: 30px 16px 30px 16px;
   }
@@ -34,6 +36,8 @@
 
 @media (min-width: $tablet-width) {
   .services {
+    border-top: 70px solid #fff;
+    margin-top: -70px;
     &__wrapper {
       padding: 50px 20px;
       display: flex;
@@ -65,6 +69,8 @@
 
 @media (min-width: $desktop-width) {
   .services {
+    border-top: 56px solid #fff;
+    margin-top: -56px;
     padding: 50px 0;
     &__wrapper {
       padding: 0 25px;
