--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import "./blocks//adjustment-item.scss";
 @import "./blocks/types.scss";
 @import "./blocks/type.scss";
+@import "./blocks/master.scss";
+@import "./blocks//plan.scss";
