--- a/source/sass/blocks/callback.scss
+++ b/source/sass/blocks/callback.scss
@@ -6,6 +6,16 @@
     border: 1px solid #000;
     border-radius: 5px;
     padding: 10px;
+    background-color: #fff;
+  }
+  &--master {
+    text-align: center;
+    & .form__submit {
+      text-transform: uppercase;
+    }
+    & .callback__wrapper {
+      padding: 20px;
+    }
   }
 }
 
