--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,4 @@
 @import "./blocks/type.scss";
 @import "./blocks/master.scss";
 @import "./blocks//plan.scss";
+@import "./blocks/portfolio.scss";
