--- a/source/sass/global/animations.scss
+++ b/source/sass/global/animations.scss
@@ -20,6 +20,17 @@
   }
 }
 
+@keyframes upScale {
+  from {
+    opacity:0;
+    transform:scale3d(0,0,0);
+  }
+  to {
+    opacity:1;
+    transform: scale3d(1,1,1);
+  }
+}
+
 @keyframes fadeInLeft {
   from {
     opacity:0;
@@ -29,6 +40,10 @@
     opacity:1;
     transform:none;
   }
+}
+.upScale {
+  animation-name:upScale;
+  animation-duration: 1s;
 }
 .fadeInUp {
   animation-name:fadeInUp;
