--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,4 @@
 @import "./blocks/master.scss";
 @import "./blocks//plan.scss";
 @import "./blocks/portfolio.scss";
+@import "./blocks/popup.scss";
