Add Solutions section

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,5 @@
 @import "./blocks//plan.scss";
 @import "./blocks/portfolio.scss";
 @import "./blocks/popup.scss";
+@import "./blocks/solutions.scss";
+@import "./blocks/solution.scss";
