--- a/source/sass/blocks/master.scss
+++ b/source/sass/blocks/master.scss
@@ -20,7 +20,7 @@
   &__title {
     font-size: 21px;
     font-weight: 700;
-    line-height: 27.3px;
+    line-height: 1.3em;
     text-transform: uppercase;
     color: #fff;
     margin-bottom: 20px;
@@ -31,7 +31,7 @@
   &__head-text {
     font-size: 16px;
     font-weight: 400;
-    line-height: 20.8px;
+    line-height: 1.3em;
     color: #e8e8e8;
     margin-bottom: 14.5px;
   }
@@ -42,9 +42,9 @@
     color: #ef4242;
   }
   &__text {
-    font-size: 16px;
+    font-size: 1.6vw;
     font-weight: 700;
-    line-height: 20.8px;
+    line-height: 1.3em;
     color: #fff;
     text-align: center;
     margin-bottom: 45px;
@@ -77,7 +77,7 @@
 
 @media (min-width: $desktop-width) {
   .master {
-    background-image: url("../img/master-bg.jpeg");
+    background-image: url("../img/master-bg.jpg");
     background-position: center;
     background-size: cover;
     &__header {
