--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -3,9 +3,10 @@
   border-top: 80px solid #fff;
 	margin-top: -80px;
   &__wrapper {
-    padding: 30px 16px 30px 16px;
+    padding: 30px 23px 30px 23px;
   }
   &__text {
+    padding-left: 3%;
     font-size: 16px;
     font-weight: 400;
     line-height: 20.8px;
@@ -20,6 +21,7 @@
     }
   }
   &__title {
+    padding-left: 3%;
     font-size: 18px;
     font-weight: 700;
     line-height: 23.4px;
