--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,3 +23,4 @@
 @import "./blocks/popup.scss";
 @import "./blocks/solutions.scss";
 @import "./blocks/solution.scss";
+@import "./blocks/architect.scss";
