Add Contacts section

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,6 @@
 @import "./blocks/solutions.scss";
 @import "./blocks/solution.scss";
 @import "./blocks/architect.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/achievments.scss";
+@import "./blocks/contact.scss";
