--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -8,5 +8,5 @@
   font-family: "Manrope";
   font-weight: 400;
   font-display: swap;
-  src: url("../fonts/Manrope-Light.woff2");
+  src: url("../fonts/Manrope-Regular.woff2");
 }
