--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,4 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/achievments.scss";
 @import "./blocks/contact.scss";
+@import "./blocks/catalog.scss";
