--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,4 +1,6 @@
 .contacts {
+  border-top: 80px solid #fff;
+	margin-top: -80px;
   padding: 80px 20px;
   &__sup-title {
     font-size: 16px;
@@ -34,6 +36,8 @@
 
 @media (min-width: $tablet-width) {
   .contacts {
+    border-top: 70px solid #fff;
+    margin-top: -70px;
     &__sup-title {
       font-size: 24px;
     }
@@ -59,6 +63,8 @@
 
 @media (min-width: $desktop-width) {
   .contacts {
+    border-top: 56px solid #fff;
+    margin-top: -56px;
     &__description {
       width: 62.94%;
       margin-right: 10px;
