--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -121,7 +121,7 @@
       position: absolute;
       bottom: 0;
       right: 0;
-      background-image: url("../../img/bg-main.png");
+      background-image: url("../img/bg-main.png");
       background-position: bottom right;
       background-size: cover;
     }
