--- a/source/sass/blocks/plan.scss
+++ b/source/sass/blocks/plan.scss
@@ -17,19 +17,19 @@
       margin-bottom: 10px;
     }
     &--type::before {
-      background-image: url("../../img/master--type.svg");
+      background-image: url("../img/master--type.svg");
     }
     &--size::before {
-      background-image: url("../../img/master--size.svg");
+      background-image: url("../img/master--size.svg");
     }
     &--around::before {
-      background-image: url("../../img/master--around.svg");
+      background-image: url("../img/master--around.svg");
     }
     &--style::before {
-      background-image: url("../../img/master--style.svg");
+      background-image: url("../img/master--style.svg");
     }
     &--normative::before {
-      background-image: url("../../img/master--normative.svg");
+      background-image: url("../img/master--normative.svg");
     }
   }
   &__text {
