--- a/source/sass/blocks/solution.scss
+++ b/source/sass/blocks/solution.scss
@@ -17,22 +17,22 @@
       margin: 0 auto 15px auto;
     }
     &--1::before {
-      background-image: url("../../img/icon-solution-1.svg");
+      background-image: url("../img/icon-solution-1.svg");
     }
     &--2::before {
-      background-image: url("../../img/icon-solution-2.svg");
+      background-image: url("../img/icon-solution-2.svg");
     }
     &--3::before {
-      background-image: url("../../img/icon-solution-3.svg");
+      background-image: url("../img/icon-solution-3.svg");
     }
     &--4::before {
-      background-image: url("../../img/icon-solution-4.svg");
+      background-image: url("../img/icon-solution-4.svg");
     }
     &--5::before {
-      background-image: url("../../img/icon-solution-5.svg");
+      background-image: url("../img/icon-solution-5.svg");
     }
     &--6::before {
-      background-image: url("../../img/icon-solution-6.svg");
+      background-image: url("../img/icon-solution-6.svg");
     }
   }
   &__text {
