--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -58,6 +58,15 @@
     font-size: 14px;
     margin-bottom: 20px;
   }
+  .catalog__callback .modal {
+    &__warning {
+      font-size: 18px;
+    }
+    &__title {
+      font-size: 14px;
+      font-family: "Roboto";
+    }
+  }
 }
 
 @media (min-width: $desktop-width) {
@@ -79,5 +88,14 @@
   }
   .master__callback .modal__title {
     font-size: 16px;
+  }
+  .catalog__callback .modal {
+    &__warning {
+      font-size: 24px;
+    }
+    &__title {
+      font-size: 16px;
+      line-height: 1.3em;
+    }
   }
 }
