--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -10,3 +10,9 @@
   font-display: swap;
   src: url("../fonts/Manrope-Regular.woff2");
 }
+@font-face {
+  font-family: "Roboto";
+  font-weight: 400;
+  font-display: swap;
+  src: url("../fonts/Roboto-Regular.woff2");
+}
