Add Footer section

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -19,6 +19,9 @@
     width: 44%;
     padding-right: 10px;
   }
+  &__logo {
+    display: inline-block;
+  }
   &__contacts-wrapper {
     width: 66%;
     height: 100%;
