--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,7 @@
 @import "./blocks/achievments.scss";
 @import "./blocks/contact.scss";
 @import "./blocks/catalog.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/contacts-f.scss";
+@import "./blocks/navigation-f.scss";
+@import "./blocks/copyright.scss";
