--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,3 +32,4 @@
 @import "./blocks/contacts-f.scss";
 @import "./blocks/navigation-f.scss";
 @import "./blocks/copyright.scss";
+@import "./blocks/modal-cb.scss";
