--- a/source/sass/blocks/contacts-f.scss
+++ b/source/sass/blocks/contacts-f.scss
@@ -53,6 +53,17 @@
   }
 }
 
+.modal-cb .contacts-f {
+  &__telegram {
+    border: 1px solid #e8e8e8;
+    font-size: 14px;
+    margin-bottom: 0;
+    &--icon {
+      background-image: url("../img/icon-whatsApp--modal.svg");
+    }
+  }
+}
+
 @media (min-width: $desktop-width) {
   .contacts-f {
     &__title {
