--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -39,6 +39,57 @@
     text-transform: uppercase;
   }
 }
+.modal-cb .modal {
+  text-align: center;
+  &__warning {
+    font-family: "Open Sans";
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.3em;
+    color: #202020;
+    margin-bottom: 10px;
+  }
+  &__title {
+    font-family: "Roboto";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.3em;
+    color: #666;
+    margin-bottom: 10px;
+  }
+  &__manager {
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.3em;
+    color: #7a7a7a;
+    margin-bottom: 10px;
+    &--big {
+      font-size: 18px;
+    }
+  }
+  &__phone {
+    font-family: "Open Sans";
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #202020;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 15px;
+    &::before {
+      display: block;
+      content: "";
+      width: 24px;
+      height: 24px;
+      background-image: url("../img/icon-phone--desktop.svg");
+      background-size: contain;
+      margin-right: 10px;
+    }
+  }
+}
 @media (min-width: $tablet-width) {
   .modal {
     &__title {
@@ -65,6 +116,11 @@
     &__title {
       font-size: 14px;
       font-family: "Roboto";
+    }
+  }
+  .modal-cb .modal {
+    &__manager {
+      font-size: 12px;
     }
   }
 }
