--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -43,6 +43,7 @@
     &__wrapper {
       padding: 50px 20px;
       display: flex;
+      align-items: center;
     }
     &__text {
       font-size: 18px;
