--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -33,3 +33,4 @@
 @import "./blocks/navigation-f.scss";
 @import "./blocks/copyright.scss";
 @import "./blocks/modal-cb.scss";
+@import "./blocks/thanks.scss";
