--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -91,6 +91,30 @@
   }
 }
 
+.thanks .form {
+  &__submit {
+    font-size: 16px;
+    line-height: 1;
+    font-weight: 500;
+    width: 100%;
+    display: inline-block;
+    &--whatsapp {
+      padding: 12px 24px;
+      min-height: 44px;
+      margin-bottom: 70px;
+      width: 50%;
+      display: block;
+      background-image: url("../img/icon-whatsApp.svg");
+      background-size: 14px 16px;
+      background-position: 24px center;
+    }
+    &--return {
+      padding: 15px 30px;
+      min-height: 49px;
+    }
+  }
+}
+
 @media (min-width: $tablet-width) {
   .form {
     &__input {
@@ -129,6 +153,9 @@
     & label {
       font-size: 16px;
     }
+  }
+  .thanks .form__submit {
+    width: 50%;
   }
 }
 
