--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -22,3 +22,9 @@
   font-display: swap;
   src: url("../fonts/Stolzl-Bold.woff2");
 }
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-display: swap;
+  src: url("../fonts/OpenSans-Bold.woff");
+}
